--- a/contact/index.html
+++ b/contact/index.html
@@ -4,49 +4,258 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" type="image/png" sizes="32x32" href=http://0.0.0.0:4000/assets/favicon.png>
+  <title>Predrag Stošić</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" href="/assets/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
-<body class="bg-light">
-<div class="wrapper">
-    <div class="container">
-  <div class="row">
-    <div class="col-md-6 col-sm-12">
-      <h1 class="my-0 mr-md-auto font-weight-bold display-4">
-        <a href="/" class="title">
-          stole
-        </a>
-      </h1>
-    </div>
+<body style="background-color: #F0F2F4" class="has-navbar-fixed-top">
+<script src="/assets/loading.js"></script>
 
-    <div class="col-md-6 col-sm-12 d-flex align-items-center justify-content-end">
-      <nav class="my-2 my-md-0 items line-up">
-        <a class="p-1 m-1 text-muted font-weight-bold" href="https://github.com/stoleS" target="_blank">github</a>
-        <a class="p-1 m-1 text-muted font-weight-bold" href="/archive">archive</a>
-        <a class="p-1 m-1 text-muted font-weight-bold" href="#">about</a>
-        <a class="p-1 m-1 text-muted font-weight-bold" href="#">contact</a>
-      </nav>
+<!-- START NAV -->
+<nav class="navbar is-fixed-top">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item logo" href="/">
+        <img src=http://0.0.0.0:4000/assets/logo.png alt="Stole">
+      </a>
+      <span class="navbar-burger burger" data-target="navbarMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+    </div>
+    <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-end">
+        <a class="navbar-item is-active" href="/">
+          Home
+        </a>
+        <a class="navbar-item" href="/archive">
+          Archive
+        </a>
+        
+        <a class="navbar-item" href="/contact">
+          Contact
+        </a>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Social
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" target="_blank" href="https://github.com/stoleS">
+              <span class="icon">
+                <i class="fab fa-github"></i>
+              </span>
+              <span>GitHub</span>
+            </a>
+            <a class="navbar-item" target="_blank" href="https://linkedin.com/in/predragstosic96">
+              <span class="icon">
+                <i class="fab fa-linkedin"></i>
+              </span>
+              <span>LinkedIn</span>
+            </a>
+            <a class="navbar-item" target="_blank" href="https://www.facebook.com/stosic.predrag.96">
+              <span class="icon">
+                <i class="fab fa-facebook-square"></i>
+              </span>
+              <span>Facebook</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+<!-- END NAV -->
+<section class="hero is-info is-medium is-bold">
+  <div class="hero-body" style="background-image:url(/assets/contact.jpeg);">
+    <div class="container has-text-centered">
+      <h1 class="subtitle is-2" id="type">Contact</h1>
+    </div>
+  </div>
+</section>
+<div class="container">
+  <!-- START ARTICLE FEED -->
+  <section class="articles">
+    <div class="column is-8 is-offset-2">
+      <!-- START ARTICLE -->
+      <div class="card article">
+  <div class="card-content">
+    <div class="content article-body">
+      <div class="field is-horizontal">
+        <div class="field-label is-normal">
+          <label class="label">From</label>
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <p class="control is-expanded has-icons-left">
+              <input class="input" type="text" placeholder="Name">
+              <span class="icon is-small is-left">
+                <i class="fas fa-user"></i>
+              </span>
+            </p>
+          </div>
+          <div class="field">
+            <p class="control is-expanded has-icons-left has-icons-right">
+              <input class="input is-success" type="email" placeholder="Email" value="john@doe.com">
+              <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+              </span>
+              <span class="icon is-small is-right">
+                <i class="fas fa-check"></i>
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="field is-horizontal">
+        <div class="field-label"></div>
+        <div class="field-body">
+          <div class="field is-expanded">
+            <div class="field has-addons">
+              <p class="control">
+                <a class="button is-static">
+                  +381
+                </a>
+              </p>
+              <p class="control is-expanded">
+                <input class="input" type="tel" placeholder="Your phone number">
+              </p>
+            </div>
+            <p class="help">Do not enter the first zero</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="field is-horizontal">
+        <div class="field-label is-normal">
+          <label class="label">Subject</label>
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <input class="input is-danger" type="text" placeholder="e.g. Partnership opportunity">
+            </div>
+            <p class="help is-danger">
+              This field is required
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="field is-horizontal">
+        <div class="field-label is-normal">
+          <label class="label">Question</label>
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <textarea class="textarea" placeholder="Feel free to ask anything"></textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="field is-horizontal">
+        <div class="field-label">
+          <!-- Left empty for spacing -->
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <button class="button is-primary">
+                Send message
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-    <div class="container">
-    
+      <!-- END ARTICLE -->
     </div>
+  </section>
+  <!-- END ARTICLE FEED -->
 </div>
 <footer class="footer">
-  <div class="container d-flex flex-column align-items-center justify-content-center">
-    <p class="text-white text-justify">
+  <div class="content has-text-centered">
+    <p>
       <a href="/">Predrag Stošić</a>, 2018. The source code is licensed
       <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.</p>
+      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a><br><br>Powered by:<br><a href=""><img src="https://raw.githubusercontent.com/jekyll/brand/master/jekyll-logo-black-red-transparent.png"
+          alt="Jekyll" width="128" height="24"></a>
+      <br>
+      <a href="https://bulma.io">
+        <img src="https://bulma.io/images/made-with-bulma--semiblack.png" alt="Made with Bulma" width="128" height="24">
+      </a>
+    </p>
+    <p>Original theme by <a href="https://github.com/dansup">@dansup</a></p>
   </div>
 </footer>
+<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
 
-<script src="/assets/jquery.min.js"></script>
-<script src="/assets/popper.min.js"></script>
-<script src="/assets/bootstrap.min.js"></script>
+    // Get all "navbar-burger" elements
+    const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+    // Check if there are any navbar burgers
+    if ($navbarBurgers.length > 0) {
+
+      // Add a click event on each of them
+      $navbarBurgers.forEach(el => {
+        el.addEventListener('click', () => {
+
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
+
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle('is-active');
+          $target.classList.toggle('is-active');
+
+        });
+      });
+    }
+  });
+
+  // Typing effect
+  let i = 0;
+  let text = document.getElementById("type").innerHTML;
+  document.getElementById("type").innerHTML = "";
+  let speed = 50;
+
+  function type() {
+    if (i < text.length) {
+      document.getElementById("type").innerHTML += text.charAt(i);
+      i++;
+      setTimeout(type, speed);
+    }
+  }
+
+  function removeLoader() {
+    document.getElementById("loader").classList.remove("is-active");
+  }
+
+  window.addEventListener("load", () => {
+    const loadTime = window.performance.timing.domContentLoadedEventEnd- window.performance.timing.navigationStart;
+    let addedTime = 0;
+
+    if(loadTime <= 1000) {
+      addedTime = 1000 - loadTime;
+    }
+
+    setTimeout(removeLoader, addedTime);
+    type();
+  });
+  
+</script>
 </body>
 
 </html>
