--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item logo" href="/">
-        <img src="/assets/logo.png" alt="Stole">
+        <img src="/assets/10print.jpeg" alt="Stole">
       </a>
       <span class="navbar-burger burger" data-target="navbarMenu">
         <span></span>
@@ -112,7 +112,7 @@
       </div>
     </div>
     <figure class="image">
-      <img src=/assets/ghibli-search/ghibli-search.png>
+      <img src=/assets/ghibli-search/ghibli-search.jpeg>
     </figure>
     <div class="content article-body">
       <p class="card-text"><blockquote> <p>Notice: This article is not a tutorial, but just a simple and quick overview on how this app was built.</p> </blockquote> <p>GitHub repository <a href="https://github.com/toddmotto/public-apis">public-apis</a> is a great place if you’re looking for a free API for your next project. One of them is Studio’s Ghibli API which contains a list of their movies, as well as a list of characters, places etc. Since I’m learning React, I decided to try it out in a mini project, simply called...</p>
@@ -144,7 +144,7 @@
       </div>
     </div>
     <figure class="image">
-      <img src=/assets/projects-blog/projects-blog.png>
+      <img src=/assets/projects-blog/projects-blog.jpeg>
     </figure>
     <div class="content article-body">
       <p class="card-text"><p>While looking at my <a href="https://github.com/stoleS">github profile</a>, I thought it would be good to better describe some more important projects in a blog type website. Since I worked with <a href="https://jekyllrb.com/">Jekyll</a> before, I decided to use it as a backbone for this project. So here it is, in all of it’s glory. In the next few paragraphs I’ll try to explain some of more important things of this project.</p> <h3 id="dependencies">Dependencies</h3> <p>For this project I used only one npm dependency,...</p>
